--- a/mi_card/pubspec.yaml
+++ b/mi_card/pubspec.yaml
@@ -60,7 +60,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - images/
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -69,7 +69,10 @@ flutter:
   # https://flutter.dev/assets-and-images/#from-packages
 
   fonts:
-     - family: Pacifico
-       fonts:
-         - asset: fonts/Pacifico-Regular.ttf
+    - family: Pacifico
+      fonts:
+        - asset: fonts/Pacifico-Regular.ttf
+    - family: Source Code Pro
+      fonts:
+        - asset: fonts/SourceCodePro-Regular.ttf
 
