--- a/flat_chat/android/app/build.gradle
+++ b/flat_chat/android/app/build.gradle
@@ -45,7 +45,7 @@ android {
 
     defaultConfig {
         applicationId "com.cdinh.flash_chat"
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
