--- a/favorite_places/pubspec.yaml
+++ b/favorite_places/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   riverpod: ^2.4.9
   flutter_riverpod: ^2.4.9
   uuid: ^4.3.3
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
